--- a/RecordTimes/app/build.gradle
+++ b/RecordTimes/app/build.gradle
@@ -30,9 +30,12 @@ android {
 
 dependencies {
 
+    implementation "androidx.recyclerview:recyclerview:1.1.0" // recycler view
+//    implementation "androidx.fragment:fragment:1.6.1" // Fragment
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    //implementation 'androidx.leanback:leanback-grid:1.0.0-alpha02'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
