--- a/RecordTimes/build.gradle
+++ b/RecordTimes/build.gradle
@@ -1,4 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-id 'com.android.application' version '8.2.1' apply false
+id 'com.android.application' version '8.2.2' apply false
+
+id 'androidx.room' version '2.6.0' apply false
 }
